# CPU-RayTracer

./: README.md
CPU_RayTracer/: CMakeLists.txt  CMakePresets.json
CPU_RayTracer/CPU_RayTracer/: CMakeLists.txt  CPU_RayTracer.cpp  CPU_RayTracer.h
CPU_RayTracer/CPU_RayTracer/includes/: ThreadLockFreeQueue.h  ThreadPool.h  simd_helper.h
CPU_RayTracer/CPU_RayTracer/src/: CMakeLists.txt  Renderer.cpp  Renderer.h
CPU_RayTracer/CPU_RayTracer/src/math/: Vector3.h
CPU_RayTracer/CPU_RayTracer/src/render/: CMakeLists.txt  Camera.cpp  Camera.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h
